<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/user_title"
        >
    <ImageView
        android:id="@+id/touxiang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@mipmap/ic_default_user_head"
        />
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/touxiang"
            android:layout_centerHorizontal="true"
            android:textColor="@color/nav_sousuo"
            android:text="没有登录"
            />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/title"
        android:background="@color/user_titles"
        >
        <Button
            android:id="@+id/shangpin"
            style="@style/user_nav"
            android:text="@string/user_nav_shangpin"
            android:drawableTop="@mipmap/ic_action_collection"/>
        <Button
            android:id="@+id/dianpu"
            style="@style/user_nav"
            android:text="@string/user_nav_dianpu"
            android:drawableTop="@mipmap/ic_collection_store"/>
        <Button
            android:id="@+id/zuji"
            style="@style/user_nav"
            android:text="@string/user_nav_zuji"
            android:drawableTop="@mipmap/ic_user_footprint"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/dindan"
        android:layout_below="@id/nav"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:background="@color/nav_sousuo"
        android:layout_height="wrap_content">
      <ImageView
          android:id="@+id/didantu"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@mipmap/ic_user_order"
          />
        <TextView
            android:layout_toRightOf="@id/didantu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="全部订单"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_normal_dot_left"
            android:layout_alignParentRight="true"
            android:layout_marginTop="4dp"
            android:layout_marginRight="10dp"
            />
        <LinearLayout
            android:id="@+id/dindannav"
            android:layout_below="@id/didantu"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/weifukuan"
                style="@style/user_dindan_nav"
                android:drawableTop="@mipmap/ic_user_order_wait_pay"
                android:text="@string/user_dindan_weifukuan"
                />
            <Button
                android:id="@+id/daifukuan"
                style="@style/user_dindan_nav"
                android:drawableTop="@mipmap/ic_user_order_wait_drive"
                android:text="@string/user_dindan_daifukuan"
                />
            <Button
                android:id="@+id/daishouhuo"
                style="@style/user_dindan_nav"
                android:drawableTop="@mipmap/ic_user_order_wait_receipt"
                android:text="@string/user_dindan_daishouhuo"
                />
            <Button
               android:id="@+id/daipingjia"
                style="@style/user_dindan_nav"
                android:drawableTop="@mipmap/ic_user_order_wait_comment"
                android:text="@string/user_dindan_daipingjia"
                android:background="@color/nav_sousuo"
                />
            <Button
                android:id="@+id/tuikuan"
                style="@style/user_dindan_nav"
                android:drawableTop="@mipmap/ic_user_order_wait_refund"
                android:text="@string/user_dindan_tuikuan"
                android:background="@color/nav_sousuo"
                />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/caichan"
        android:layout_below="@id/dindan"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:background="@color/nav_sousuo"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/caichantu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_user_property"
            />
        <TextView
            android:layout_toRightOf="@id/caichantu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="我的财产"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_normal_dot_left"
            android:layout_alignParentRight="true"
            android:layout_marginTop="4dp"
            android:layout_marginRight="10dp"
            />
        <LinearLayout
            android:id="@+id/caichannav"
            android:layout_below="@id/caichantu"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/yufukuan"
                style="@style/user_dindan_nav"
                android:drawableTop="@mipmap/ic_user_property_money"
                android:text="@string/user_caichan_yucunkuan"
                />
            <Button
                android:id="@+id/chongzhika"
                style="@style/user_dindan_nav"
                android:drawableTop="@mipmap/ic_user_property_card"
                android:text="@string/user_caichan_chongzhika"
                />
            <Button
                android:id="@+id/daijinquan"
                style="@style/user_dindan_nav"
                android:drawableTop="@mipmap/ic_user_property_vouchers"
                android:text="@string/user_caichan_daijinquan"
                />
            <Button
                android:id="@+id/hongbao"
                style="@style/user_dindan_nav"
                android:drawableTop="@mipmap/ic_user_property_red"
                android:text="@string/user_caichan_hongbao"
                android:background="@color/nav_sousuo"
                />
            <Button
                android:id="@+id/jifen"
                style="@style/user_dindan_nav"
                android:drawableTop="@mipmap/ic_user_property_integral"
                android:text="@string/user_caichan_jifen"
                android:background="@color/nav_sousuo"
                />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/shouhuodizhi"
        android:layout_below="@id/caichan"
        android:background="@color/nav_sousuo"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="35dp">
        <ImageView
            android:id="@+id/shouhuodizhitu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_user_address"/>
        <TextView
            android:layout_toRightOf="@id/shouhuodizhitu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/user_shouhuodizhi"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:src="@mipmap/ic_normal_dot_left"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/xitongshezhi"
        android:layout_below="@id/shouhuodizhi"
        android:background="@color/nav_sousuo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/xitongshezhitu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_user_setting"/>
        <TextView
            android:layout_toRightOf="@id/xitongshezhitu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/user_xitongshezhi"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:src="@mipmap/ic_normal_dot_left"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            />
    </RelativeLayout>
    <Button
        android:id="@+id/tc"
        android:layout_width="match_parent"
        android:background="@drawable/deng_button"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/white"
        android:text="退出登录"
        />
</RelativeLayout>