<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bwie.test.nsgshop.MainActivity">
    <LinearLayout
        android:id="@+id/title"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/title"
        >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/zfragment"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:layout_above="@+id/rg"
        ></LinearLayout>
    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">
        <RadioButton
            android:id="@+id/home"
            style="@style/home_nav"
            android:text="@string/app_home"
            android:drawableTop="@drawable/home_shou_img"
            />
        <RadioButton
            android:id="@+id/fclass"
            style="@style/home_nav"
            android:text="@string/app_fclass"
            android:drawableTop="@drawable/fclass_shou_img"
            />
        <RadioButton
            android:id="@+id/cart"
            style="@style/home_nav"
            android:text="@string/app_cart"
            android:drawableTop="@drawable/cart_shou_img"
            />
        <RadioButton
            android:id="@+id/user"
            style="@style/home_nav"
            android:text="@string/app_user"
            android:drawableTop="@drawable/user_shou_img"
            />
    </RadioGroup>
</RelativeLayout>
