<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_denglu"
    android:layout_width="match_parent"
    android:paddingRight="70dp"
    android:paddingLeft="70dp"
    android:background="@mipmap/deng_bg"
    android:layout_height="match_parent"
    tools:context="com.bwie.test.nsgshop.Login.view.Denglu">
    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <ImageView
            android:id="@+id/touxiang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:src="@mipmap/ic_default_user_head"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/zhong"
        android:layout_width="match_parent"
        android:layout_below="@id/title"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/name"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/nav_sousuo"
            android:hint="@string/deng_name"
            />
        <EditText
            android:id="@+id/pass"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deng_pass"
            android:textColorHint="@color/nav_sousuo"
            />
        <Button
            android:id="@+id/denglu"
            android:background="@drawable/deng_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/denglu"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/zhuce"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_below="@id/zhong"
        android:textColor="@color/nav_sousuo"
        android:layout_height="wrap_content"
        android:text="@string/zhuce"
        />
    <TextView
        android:id="@+id/wang"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/zhong"
        android:layout_alignParentRight="true"
        android:textColor="@color/nav_sousuo"
        android:layout_height="wrap_content"
        android:text="@string/zhaohui"
        />
    <LinearLayout
        android:id="@+id/disan"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_below="@id/wang"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/zfb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/ic_pay_alipay"/>
        <ImageView
            android:id="@+id/wx"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/ic_pay_wx"/>
    </LinearLayout>
</RelativeLayout>
