<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_xiangqing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bwie.test.nsgshop.xiangqing.view.XiangqingActivity">
    <com.bwie.test.nsgshop.widget.media.IjkVideoView
        android:id="@+id/video_view"
        android:layout_width="wrap_content"
        android:layout_height="300dp">
    </com.bwie.test.nsgshop.widget.media.IjkVideoView>
    <com.youth.banner.Banner
        android:id="@+id/mybanner"
        android:layout_below="@id/video_view"
        android:layout_width="match_parent"
        android:layout_height="350dp">
    </com.youth.banner.Banner>
    <TextView
        android:id="@+id/title"
        android:text="ssss"
        android:textSize="25dp"
        android:layout_below="@id/mybanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/price"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/yuanjia"
            android:layout_marginLeft="200sp"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/xianjia"
            android:textSize="32dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/text_price_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:background="@color/comm_text_tips"
            android:text="@string/zhaoxiangsi"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:background="@color/comm_text_tips"
            android:text="@string/shoucang"
            />
        <Button
            android:id="@+id/jiarugouwuche"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:background="@color/crimson"
            android:text="@string/jiarugouwuche"
            />
        <Button
            android:id="@+id/goumai"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/limegreen"
            android:text="@string/mashangqiang"
            />
    </LinearLayout>
</RelativeLayout>
